// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`job add command adds a new job 1`] = `
Array [
  Object {
    "build": undefined,
    "build_label": undefined,
    "job": undefined,
    "job_label": undefined,
    "ref": undefined,
    "url": "https://invalid/job/1",
  },
]
`;

exports[`job add command uses the build ID from the environment 1`] = `
Array [
  Object {
    "build": 2345,
    "build_label": undefined,
    "job": 12345,
    "job_label": undefined,
    "ref": undefined,
    "url": "https://invalid/job/1",
  },
]
`;

exports[`job add command uses the commit ID from the environment 1`] = `
Array [
  Object {
    "build": 2345,
    "build_label": undefined,
    "job": 12345,
    "job_label": undefined,
    "ref": "1234567",
    "url": "https://invalid/job/1",
  },
]
`;

exports[`job add command uses the job ID from the environment 1`] = `
Array [
  Object {
    "build": undefined,
    "build_label": undefined,
    "job": 12345,
    "job_label": undefined,
    "ref": undefined,
    "url": "https://invalid/job/1",
  },
]
`;
